// src/main/proto/product.proto
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc SendProduct (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  string name = 1;
  double price = 2;
}

message ProductResponse {
  string status = 1;
}
